--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <section class="hero">
     <h2>Hi, I’m Matteo Cederle</h2>
     <p>PhD Student - University of Padova, Italy</p>
-    <p><a href="mailto:matteo.cederle@phd.unipd.it">Curriculum</a></p>
+    <p><a href="https://github.com/mcederle99/matteo-cederle/blob/main/cv_cederle.pdf">Curriculum</a></p>
   </section>
 
   <main>
